# PIFOCast

./: .gitignore  AGENTS.md  README.md  era5.py  pifocast-dataset.ipynb  pifocast-graph.ipynb  pyproject.toml
doc/: index.html  presentation fr.odp
pifocast/: LatLonGrid.py  __init__.py  data.py  mlputils.py  model.py
src-archive/: pifo.pbtxt
src-archive/pifocast/: PifoEncodeProcessDecode.py  __init__.py  data.py  mlputils.py  model.py
