[project]
authors = [{name = "", email = ""}]
dependencies = []
name = "pifocast"
requires-python = ">= 3.11,<3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pifocast = { path = ".", editable = true }
cdsapi = ">=0.7.5"
xarray = ">=2025.3.1"
tensorflow = ">=2.19.0"
magics = ">=1.5.8"
matplotlib = ">=3.10.1"
cfgrib = ">=0.9.15.0"
tf-keras = "==2.19.0"
tensorflow-gnn = ">=1.0.3"

[tool.pixi.tasks]

[tool.pixi.dependencies]
ipykernel = ">=6.29.5,<7"
pip = ">=25.1.1,<26"
