[project]
authors = [{name = "pifocast"}]
dependencies = []
name = "pifocast"
requires-python = ">= 3.11,<3.13"
version = "0.2.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pifocast = { path = ".", editable = true }
cdsapi = ">=0.7.5"
xarray = ">=2025.3.1"
matplotlib = ">=3.10.1"
cfgrib = ">=0.9.15.0"
jax = ">=0.5.1"
jaxlib = ">=0.5.1"
flax = ">=0.10.3"
optax = ">=0.2.4"
orbax-checkpoint = ">=0.2.4"

[tool.pixi.dependencies]
ipykernel = ">=6.29.5,<7"
pip = ">=25.1.1,<26"
